--- a/conFusion/package.json
+++ b/conFusion/package.json
@@ -25,7 +25,9 @@
     {
       "locator": "https://github.com/EddyVerbruggen/Toast-PhoneGap-Plugin.git",
       "id": "cordova-plugin-x-toast"
-    }
+    },
+    "cordova-plugin-camera",
+    "org.apache.cordova.camera"
   ],
   "cordovaPlatforms": [
     "android"
